--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -51,7 +51,7 @@
 
 \thispagestyle{plain}
 \begin{flushright}
-\large{\textbf{TYPE YOUR NAME HERE \\
+\large{\textbf{Geoffrey Parker - grp352\\
 HW 1: 1.1 - 1.3, 1.6 - 1.14\\
 M328K \\
 January 19th, 2012 \\}}
@@ -74,7 +74,7 @@ c)$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, and $c$ be integers where $a|b$ and $a|c$.  We will show that, given this, $a|(b + c)$.  Since $a|b$ and $a|c$, then by the definition of divides $b = aj$ and $c = ak$ for some integers $j$ and $k$.  Therefore $b + c = aj + ak$ and $b + c = a(j + k)$.  Because $j$ and $k$ are both integers, $j + k$ is also an integer.  So by the definition of divides, $a|(b + c)$.
 \end{proof}
 
 %%%%%%%%%%%%1.2%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -84,8 +84,7 @@ c)$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
-\end{proof}
+Let $a$, $b$, and $c$ be integers where $a|b$ and $a|c$.  We will show that, given this, $a|(b - c)$.  Since $a|b$ and $a|c$, then by the definition of divides $b = aj$ and $c = ak$ for some integers $j$ and $k$.  Therefore $b - c = aj - ak$ and $b - c = a(j - k)$.  Because $j$ and $k$ are both integers, $j - k$ is also an integer.  So by the definition of divides, $a|(b - c)$.\end{proof}
 
 %%%%%%%%%%%%1.3%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thm}
@@ -93,8 +92,7 @@ Let $a$, $b$, and $c$ be integers. If $a|b$ and $a|c$, then $a|bc$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
-\end{proof}
+Let $a$, $b$, and $c$ be integers where $a|b$ and $a|c$.  We will show that, given this, $a|bc$.  Since $a|b$ and $a|c$, then by the definition of divides $b = aj$ and $c = ak$ for some integers $j$ and $k$.  Therefore $bc = ajak$ and $b + c = a(ajk)$.  Because $a$, $j$, and $k$ are all integers, $ajk$ is also an integer.  So by the definition of divides, $a|bc$.\end{proof}
 
 %%%%%%%%%Now, set the thorem number to one less than the first theorem in the assignment.
 \setcounter{thm}{5}
@@ -105,31 +103,36 @@ Let $a$, $b$, and $c$ be integers. If $a|b$, then $a|bc$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, and $c$ be integers where $a|b$.  We will show that $a|bc$.  Since $a|b$, then by the definition of divides $b = ak$ for some integer $k$.  Therefore $bc = akc$. Because $k$ and $c$ are both integers, $kc$ is also an integer.  So by the definition of divides, $a|bc$.
 \end{proof}
 
+\pagebreak
 %%%%%%%%%%%%1.7%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{exer} Answer each of the following questions, and prove that your answer is
 correct. \end{exer}
 \begin{enumerate}
 \item[(1)] Is $45 \equiv 9\pmod{4}$?
+\\Yes.
 \begin{proof}[Proof]
-Type your proof here!
+$45-9 = 36.$  $36 = 4 \times 9.$  Therefore $4|36$.  So by the definition of congruence, $45 \equiv 9\pmod{4}.$
 \end{proof}
 
 \item[(2)] Is $37 \equiv 2 \pmod{5}$?
+\\Yes.
 \begin{proof}[Proof]
-Type your proof here!
+$37-2 = 35.$  $35 = 5 \times 7.$  Therefore $5|35$.  So by the definition of congruence, $37 \equiv 2\pmod{5}.$
 \end{proof}
 
 \item[(3)] Is ${37 \equiv 3 \pmod{5}}$?
+\\No.
 \begin{proof}[Proof]
-Type your proof here!
+$37-3 = 34.$  $5 \times 6 = 30$ and $5 \times 7 = 35$.  Since $30 < 34 < 35$, there is no integer x such that $5 \times x = 34$. Therefore by the definition of divides, $5 \nmid 34$.  So by the definition of congruence, $37 \not \equiv 3\pmod{5}.$
 \end{proof}
 
 \item[(4)] Is $31 \equiv -3 \pmod{5}$?
+\\No.
 \begin{proof}[Proof]
-Type your proof here!
+$31-(-3) = 34.$  $5 \times 6 = 30$ and $5 \times 7 = 35$.  Since $30 < 34 < 35$, there is no integer x such that $5 \times x = 34$. Therefore by the definition of divides, $5 \nmid 34$.  So by the definition of congruence, $31 \not \equiv -3\pmod{5}.$
 \end{proof}
 
 \end{enumerate}
@@ -142,27 +145,29 @@ characterize all the integers $m$ that satisfy that congruence.
 \begin{enumerate}
     \item[(1)] $m \equiv 0 \pmod{3}$.
     \begin{proof}[Solution]
-    Type your solution here!
+    This is satisfied when $m = 3n$ for any integer $n$.
     \end{proof}
+
+	\pagebreak
 
     \item[(2)] $m \equiv 1 \pmod{3}$.
     \begin{proof}[Solution]
-    Type your solution here!
+    This is satisfied when $m = 3n + 1$ for any integer $n$.
     \end{proof}
 
     \item[(3)] $m \equiv 2 \pmod{3}$.
     \begin{proof}[Solution]
-    Type your solution here!
+    This is satisfied when $m = 3n + 2$ for any integer $n$.
     \end{proof}
 
     \item[(4)] $m \equiv 3 \pmod{3}$.
     \begin{proof}[Solution]
-    Type your solution here!
+    This is satisfied when $m = 3n$ for any integer $n$.
     \end{proof}
 
     \item[(5)] $m \equiv 4 \pmod{3}$.
     \begin{proof}[Solution]
-    Type your solution here!
+    This is satisfied when $m = 3n + 1$ for any integer $n$.
     \end{proof}
 
 \end{enumerate}
@@ -174,7 +179,10 @@ Let $a$ and $n$ be integers with $n > 0$. Then $a \equiv a
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$ and $n$ be integers with $n > 0$.  We will show that $a \equiv a
+\pmod{n}$.  To start with, $a - a = 0$.  Since all integers divide 0, $n 
+\mid (a - a)$.  Therefore, by definition of congruence, $a \equiv a
+\pmod{n}$.
 \end{proof}
 
 %%%%%%%%%%%%1.10%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -182,9 +190,10 @@ Type your proof here!
 Let $a$, $b$, and $n$ be integers with $n > 0$. If $a \equiv b
 \pmod{n}$, then ${b \equiv a \pmod{n}}$.
 \end{thm}
-
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, and $n$ be integers with $n > 0$ and $a \equiv b
+\pmod{n}$.  We will show that ${b \equiv a \pmod{n}}$.  Since $a \equiv b
+\pmod{n}$, then by definition of congruence, $n|(a - b)$.  This in turn means, by definition of divides, that $a - b = nk$ for some integer $k$.  From here, we can say that $b - a = -(a - b) = -(nk) = n(-k)$.  Since $k$ is an integer, $-k$ is also an integer.  Therefore $n|(b - a)$, which means that ${b \equiv a \pmod{n}}$.
 \end{proof}
 
 %%%%%%%%%%%%1.11%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -194,7 +203,8 @@ Let $a$, $b$, $c$, and $n$ be integers with $n > 0$. If $a \equiv b
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, $c$, and $n$ be integers with $n > 0$, $a \equiv b
+\pmod{n}$, and ${b \equiv c \pmod{n}}$. We will show $a \equiv c \pmod{n}$.  By definition of congruence, we have $n|(a - b)$ and $n|(b - c)$.  By definition of divides, this gives us $a - b = nj$ and $b - c = nk$ for some integers $j$ and $k$.  So $a - c = (a - b) + (b - c) = nj + nk = n(j + k)$.  Since $j$ and $k$ are integers, $j + k$ is also an integer.  Therefore $n|(a - c)$, which means that $a \equiv c \pmod{n}$.
 \end{proof}
 
 %%%%%%%%%%%%1.12%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -205,7 +215,8 @@ Let $a$, $b$, $c$, $d$, and $n$ be integers with $n > 0$. If $a
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, $c$, $d$, and $n$ be integers with $n > 0$, $a
+\equiv b \pmod{n}$, and ${c \equiv d \pmod{n}}$. We will show that $a + c \equiv b + d \pmod{n}$.  By definition of congruence, we have $n|(a - b)$ and $n|(c - d)$.  By definition of divides, this gives us $a - b = nj$ and $c - d = nk$ for some integers $j$ and $k$.  So $(a + c) - (b + d) = (a - b) + (c - d) = nj + nk = n(j + k)$.  Since $j$ and $k$ are integers, $j + k$ is also an integer.  Therefore $n|(a + c) - (b + d)$, which means that $a + c \equiv b + d \pmod{n}$.
 \end{proof}
 
 %%%%%%%%%%%%1.13%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -216,7 +227,8 @@ Let $a$, $b$, $c$, $d$, and $n$ be integers with $n > 0$. If $a
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, $c$, $d$, and $n$ be integers with $n > 0$, $a
+\equiv b \pmod{n}$, and ${c \equiv d \pmod{n}}$. We will show that $a - c \equiv b - d \pmod{n}$.  By definition of congruence, we have $n|(a - b)$ and $n|(c - d)$.  By definition of divides, this gives us $a - b = nj$ and $c - d = nk$ for some integers $j$ and $k$.  So $(a - c) - (b - d) = -(a - b) - (c - d) = -nj - nk = n(-j - k)$.  Since $j$ and $k$ are integers, $-j - k$ is also an integer.  Therefore $n|(a - c) - (b - d)$, which means that $a - c \equiv b - d \pmod{n}$.
 \end{proof}
 
 %%%%%%%%%%%%1.14%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -227,8 +239,8 @@ $ac \equiv bd \pmod{n}$.
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
-\end{proof}
+Let $a$, $b$, $c$, $d$, and $n$ be integers with $n > 0$, $a
+\equiv b \pmod{n}$, and ${c \equiv d \pmod{n}}$. We will show that $ac \equiv bd \pmod{n}$.  By definition of congruence, we have $n|(a - b)$ and $n|(c - d)$.  By definition of divides, this gives us $a - b = nj$ and $c - d = nk$ for some integers $j$ and $k$. So, $ac - bd = n(dj + bk + jkn)$ Since $b$, $d$, $j$, $k$, and $n$ are all integers, $dj + bk + jkn$ is also an integer.  Therefore $n|ac - bd$, which means that $ac \equiv bd \pmod{n}$.\end{proof}
 
 
 \end{document}
